<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" android:layout_height="wrap_content">
	<ScrollView android:id="@+id/ScrollView01"
		android:layout_width="wrap_content" android:layout_height="wrap_content">

		<TableLayout android:id="@+id/TableLayout01"
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_height="fill_parent" android:layout_width="fill_parent"
			android:isScrollContainer="true" android:stretchColumns="0,1,2,3,4,5">

			<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:weightSum="100">
				<Button android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:layout_weight="50"
					android:id="@+id/ButtonPlay" android:drawableTop="@drawable/play"
					android:text="@string/play_str"></Button>
				<Button android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:layout_weight="50"
					android:drawableTop="@drawable/pause" android:id="@+id/ButtonPause"
					android:text="@string/pause_str"></Button>
			</TableRow>

			<TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:weightSum="100">
				<Button android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:drawableTop="@drawable/rw"
					android:text="@string/rw_str" android:id="@+id/ButtonRew"
					android:layout_weight="50" />
				<Button android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:drawableTop="@drawable/ff"
					android:text="@string/ff_str" android:id="@+id/ButtonFF"
					android:layout_weight="50" />
			</TableRow>
			<TableRow android:id="@+id/TableRow03" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:weightSum="100">
				<Button android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/vol_up_str"
					android:id="@+id/ButtonVolUp" android:layout_weight="50"
					android:drawableTop="@drawable/speaker_plus" />
				<Button android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/info_str"
					android:id="@+id/ButtonInfo" android:layout_weight="50"
					android:drawableTop="@drawable/info" />
			</TableRow>

			<TableRow android:id="@+id/TableRow04" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:weightSum="100">
				<Button android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:id="@+id/ButtonVolDown"
					android:text="@string/vol_down_str" android:layout_weight="50"
					android:drawableTop="@drawable/speaker_minus" />
				<Button android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:id="@+id/ButtonBlank1"
					android:text="@string/ch_down_str" android:layout_weight="50"
					android:drawableTop="@drawable/tv_minus" android:visibility="invisible"/>
			</TableRow>

			<TableRow android:id="@+id/TableRow05" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:weightSum="100">
				<Button android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:id="@+id/ButtonMute"
					android:text="@string/mute_str" android:layout_weight="50"
					android:drawableTop="@drawable/speaker_off" />
				<Button android:cursorVisible="true" android:drawableTop="@drawable/cancel"
					android:layout_width="wrap_content" android:id="@+id/ButtonStop"
					android:layout_height="fill_parent" android:text="@string/back_str"></Button>
			</TableRow>

		</TableLayout>
	</ScrollView>
</LinearLayout>

